adaption of requests