@@ -9,7 +9,6 @@ import at.aau.serg.websocketdemoserver.service.GameHandler;
 import at.aau.serg.websocketdemoserver.service.LobbyHandlerInterface;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class StartGameRequest implements LobbyHandlerInterface {
 
@@ -25,12 +24,12 @@ public class StartGameRequest implements LobbyHandlerInterface {
             return new LobbyMessage(LobbyMessageType.ERROR, "Mindestens 2 Spieler notwendig, um das Spiel zu starten.");
         }
 
-        gameState.startGame();
-        gameHandler.initGame(gameState.getPlayers());
+        gameState.startGame();                            // Spieler mischen + Position auf Feld 1
+        gameHandler.initGame(gameState.getPlayers());     // Weitergabe an Spielhandler (z. B. Startnachricht etc.)
 
         List<PlayerLobbyEntry> payload = gameState.getPlayers().stream()
                 .map(p -> new PlayerLobbyEntry(p.getId(), p.getNickname()))
-                .collect(Collectors.toList());
+                .toList();
 
         return new LobbyMessage(LobbyMessageType.START_GAME, payload);
     }
